--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wx-chatgpt",
+  "name": "chatgpt",
   "version": "1.0.0",
   "description": "相学长chatgpt服务",
   "main": "index.js",
@@ -21,5 +21,5 @@
     "openai": "^3.1.0",
     "sequelize": "^6.13.0"
   },
-  "repository": "git@github.com:wuomzfx/wx-chatgpt.git"
+  "repository": "git@github.com:vnforver/chatgpt.git"
 }
